--- a/nginx/roles/websrvs/tasks/main.yml
+++ b/nginx/roles/websrvs/tasks/main.yml
@@ -1,13 +1,18 @@
 # This irole install nginx
 
 - name: copy script
-  copy: src=/tmp/nginx_php_mysql.sh dest=/tmp/nginx_php_mysql.sh force=yes
+  copy: > 
+    src=/tmp/nginx_php_mysql.sh 
+    dest=/tmp/nginx_php_mysql.sh 
+    force=yes
+    owner={{ user }}
+    group={{ group }}
 
 - name: yum clean
   shell: /bin/yum clean all
 
 - name: nginx rpm install
-  shell: /bin/bash /tmp/nginx_php_mysql.sh web
+  shell: sudo /bin/bash -c '/tmp/nginx_php_mysql.sh web'
 
 - name: /etc/nginx/conf/vhost exists
   shell: ls /etc/nginx/vhost
@@ -18,8 +23,10 @@
   shell: mkdir /etc/nginx/conf/vhost
   when: result|failed
 
-- name: copy file
+- name: copy nginx.conf
   copy: src=proxy_nginx.conf dest=/etc/nginx/conf force=yes
+
+- name: copy default
   copy: src={{ item }} dest=/etc/nginx/conf/vhost force=yes
   with_items:
    - default_upstream.conf-default
@@ -28,7 +35,10 @@
   #copy: src=www.default.com.conf-default dest=/etc/nginx/conf/vhost force=yes
 
 - name: copy config
-  template: nginx.conf.j2 dest={{ base_dir }}/nginx.conf
+  template:
+    src: nginx.conf.j2
+    #dest: {{ base_dir }}/nginx.conf
+    dest: /etc/nginx/conf/nginx.conf
   notify:
    - restart nginx
 
